@@ -4236,6 +4236,10 @@ namespace RoF
 		//IN(inventoryslot);
 		IN(target_id);
 
+		IN(y_pos);
+		IN(x_pos);
+		IN(z_pos);
+
 		FINISH_DIRECT_DECODE();
 	}
 
