@@ -647,7 +647,10 @@ struct CastSpell_Struct
 /*04*/	uint32	spell_id;
 /*08*/	ItemSlotStruct inventoryslot;  // slot for clicky item, Seen unknown of 131 = normal cast
 /*20*/	uint32	target_id;
-/*24*/	uint32	cs_unknown[5];
+/*24*/	uint32	cs_unknown[2];
+/*32*/	float	y_pos;
+/*36*/	float	x_pos;
+/*40*/	float	z_pos;
 /*44*/
 };
 
